--- a/rotate/index.html
+++ b/rotate/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="nav" style="*float:left;">
-    	<a href="http://www.buyed.cn/demo/rotate.html">下载</a>
+    	<a href="rotate.html">下载</a>
         <a href="https://me.alipay.com/rentongjie" target="_blank" title="我的支付宝收款主页">捐赠</a>
         <a href="http://www.cnblogs.com/rentj1">博客</a> 
     </div>
