--- a/rotate/index.html
+++ b/rotate/index.html
@@ -49,7 +49,7 @@
 </div>
 
 </div>
-<script src="../scripts/main.js"></script>
+<script src="../scripts/list.js"></script>
 <div style="display:none;">
 <script>
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
