--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Javascript 动画效果代码</title>
     <script src="data.json"></script>
+    <script src="https://raw.githubusercontent.com/rentj1/XElement/master/build/XElement.js"></script>
     <link href="styles/style.css" rel="stylesheet"/>
 </head>
 
